--- a/002_LaTeX/miary_wspolzaleznosci.tex
+++ b/002_LaTeX/miary_wspolzaleznosci.tex
@@ -1,4 +1,4 @@
-Problemem w poprawnym opisie zależności między zmiennymi losowymi jest fakt, że dostępnych mamy wiele statystyk które ją mierzą. Każda z nich uchwyca pewien konkretny aspekt współzależności, i nie da się jasno wyróżnić konkretnej jako "najlepszej". W tej sekcji pracy zaprezentujemy wybrane narzędzia służące do badania struktury zależności zmiennych losowych.
+Problemem w poprawnym opisie zależności między zmiennymi losowymi jest fakt, że dostępnych mamy wiele statystyk które ją mierzą. Każda z nich uchwyca pewien konkretny aspekt współzależności, i nie da się jasno wyróżnić konkretnej jako ,,najlepszej". W tej sekcji pracy zaprezentujemy wybrane narzędzia służące do badania struktury zależności zmiennych losowych.
 
 \subsubsection{$\rho$ Pearsona}
 Podstawową i najbardziej znaną miarą współzależności zmiennych losowych jest korelacja Pearsona.
