--- a/002_LaTeX/modele_spreadow.tex
+++ b/002_LaTeX/modele_spreadow.tex
@@ -1,7 +1,6 @@
-Jak pokazał rozdział \ref{sec:popularne_spready}, spready mogą powstawać w naturalny sposób pomiędzy różnymi rodzajamy aktywów co powoduje, że ich modelowanie nie jest proste. Możemy podać prosty przykład ilustrujący problem rozważając dwa spready: \emph{spark spread}, oraz \emph{LIBOR-OIS} spread. Pierwszy jest różnicą między ceną sprzedanej energii a ceną gazu ziemnego z którego została wyprodukowana. Komponent "energetyczny"~spreadu porusza się zgodnie z dynamiką charakterystyczną dla rynku energii. Można spodziewać się ciężkoogonowości dziennych zmian, ostrych pików cenowych jak i równie szybkich powrotów do średniej, czy regularnej sezonowości spowodowanej zmianami popytu na elektryczność w obrębie dnia. Gaz ziemny natomiast wykazuje obecne, choć mniej agresywne piki cenowe, sezonowość w obrębie roku, oraz podobnie jak dla cen energii \emph{mean-reversion} i ciężkie ogony przejawiające się w jego dynamice \cite{Espen_Crack_Spread_Copula}. Crack spread, będąc ich różnicą, jest ciężkoogonowy, asymetryczny, potrafiący osiągać zarówno dodatnie jak i ujemne wartości. LIBOR-OIS spread z drugiej strony jest różnicą między dwoma stopami procentowymi - w porównaniu z crack spreadem jest względnie stabilny, dodatni, i nie wykazuje sezonowości. W momentach kryzysów o podłożu kredytowym, potrafi jednak wykazać bardzo ciężki prawy ogon i zwielokrotnić swoje wartości w bardzo krótkim okresie czasu \cite{Libor_OIS_model}.\\
+Jak pokazał rozdział \ref{sec:popularne_spready}, spready mogą powstawać w naturalny sposób pomiędzy różnymi rodzajamy aktywów co powoduje, że ich modelowanie nie jest proste. Możemy podać prosty przykład ilustrujący problem rozważając dwa spready: \emph{spark spread}, oraz \emph{LIBOR-OIS} spread. Pierwszy jest różnicą między ceną sprzedanej energii a ceną gazu ziemnego z którego została wyprodukowana. Komponent ,,energetyczny"~spreadu porusza się zgodnie z dynamiką charakterystyczną dla rynku energii. Można spodziewać się ciężkoogonowości dziennych zmian, ostrych pików cenowych jak i równie szybkich powrotów do średniej, czy regularnej sezonowości spowodowanej zmianami popytu na elektryczność w obrębie dnia. Gaz ziemny natomiast wykazuje obecne, choć mniej agresywne piki cenowe, sezonowość w obrębie roku, oraz podobnie jak dla cen energii \emph{mean-reversion} i ciężkie ogony przejawiające się w jego dynamice \cite{Espen_Crack_Spread_Copula}. Crack spread, będąc ich różnicą, jest ciężkoogonowy, asymetryczny, potrafiący osiągać zarówno dodatnie jak i ujemne wartości. LIBOR-OIS spread z drugiej strony jest różnicą między dwoma stopami procentowymi - w porównaniu z crack spreadem jest względnie stabilny, dodatni, i nie wykazuje sezonowości. W momentach kryzysów o podłożu kredytowym, potrafi jednak wykazać bardzo ciężki prawy ogon i zwielokrotnić swoje wartości w bardzo krótkim okresie czasu \cite{Libor_OIS_model}.\\
 
-Dynamika spreadu jest więc wypadkową dynamiki jego komponentów. Zatem model przystosowany do jednego spreadu może nie uchwycać \emph{stylized facts} dotyczących dynamiki innego spreadu. Z tego powodu modele specyfikowane są raczej do konkretnej klasy spreadów i nie da się wskazać jednego, dominującego modelu odpowiedniego do każdej sytuacji. Podejście kopułowe opisane niżej jest jednym z najbardziej uogólinionych podejśc, pozwalając na osobne modelowanie jednowymiarowych modeli szeregów czasowych dla komponentów spreadu i swobodne łączenie ich dzięki elastyczności kopuł w spójny model dla spreadu.\\
-
+Dynamika spreadu jest więc wypadkową dynamiki jego komponentów. Zatem model przystosowany do jednego spreadu może nie uchwycać \emph{stylized facts} dotyczących dynamiki innego spreadu. Z tego powodu modele specyfikowane są raczej do konkretnej klasy spreadów i nie da się wskazać jednego, dominującego modelu odpowiedniego do każdej sytuacji. Podejście kopułowe opisane niżej jest jednym z najbardziej uogólnionych podejść, pozwalającym na osobne modelowanie jednowymiarowych modeli szeregów czasowych dla komponentów spreadu i swobodne łączenie ich dzięki elastyczności kopuł w spójny model dla samego spreadu.
 W tym rozdziale naszkicujemy popularne sposoby modelowania spreadu i wskażemy drogę generalizowania od najprostszej idei modelu Blacka-Scholesa do modelu kopułowego.
 
 \subsubsection{Modele Blacka-Scholesa oraz Bacheliera}
