--- a/002_LaTeX/pair_copula_constructions.tex
+++ b/002_LaTeX/pair_copula_constructions.tex
@@ -1,4 +1,4 @@
-Zaczniemy od przykładu w trzech wymiarach, aby zilustrować czym jest \emph{Pair copula construction} (PCC). Ogólną ideą jest to, aby wielowymiarowy rozkład zmiennej losowej rozbić na dwuwymiarowe komponenty modelowane za pomocą dwuwymiarowych kopuł.\\
+Zaczniemy od przykładu w trzech wymiarach, aby zilustrować czym jest \emph{Pair copula construction} (PCC). Ogólną ideą jest aby wielowymiarowy rozkład zmiennej losowej rozbić na dwuwymiarowe komponenty modelowane za pomocą dwuwymiarowych kopuł.\\
 
 W poniższych rozważaniach przydadzą nam się następujący lemat dotyczący relacji między gęstością kopuły a rozkładami warunkowymi:
 
