--- a/002_LaTeX/results_intro.tex
+++ b/002_LaTeX/results_intro.tex
@@ -1,5 +1,5 @@
 W gałęzi przemysłu zajmującej się soją, \emph{crushing} \emph{(eng. miażdżenie)} odnosi się do procesu jej przetwarzania, ponieważ ziarna soi są miażdżone i poddawane procesowi destylacji w celu otrzymania dwóch produktów: śruty sojowej \emph{(soybean meal)}, oraz oleju sojowego \emph{(soybean oil)}. Różnica między ceną przerobionych produktów a ceną surowca nazywana jest \emph{crush spreadem} i jest instrumentem handlowanym zarówno na rynku spot, jak i rynku futures (\cite{CME_soybean}).\\
 Obecnie soja jest jednym z najbardziej znaczących źródeł olejów roślinnych i białka dla pasz zwierzęcych. Najwięksi jej eksporterzy to USA, Brazylia, Argentyna, Chiny i India, dzielące między sobą około 90\% światowej produkcji soi. Wraz ze ze stale powiększającą się populacją, stale rośnie również zapotrzebowanie na produkty agrokultury. Do 2050 roku prognozuje się roczny wzrost podaży soi na poziomie około $1.3\%$ - co będzie niewystarczające do zaspokojenia potrzeb konsumpcyjnych (\cite{Pagano_Soybean_importance}). Soybean crush, jako wskaźnik kosztu produkcji, oraz wystawione na niego kontrakty futures służą więc jako ważne ekononomiczne monitory kondycji rynku agrokultury i ziaren.\\
 
-W tym rozdziale zajmiemy się analizą soybean crush spreadu przy pomocy modelu wyrażonego równaniami \ref{eq:model_armagarch}. W kolejnych sekcjach opiszemy użyte rynkowe dane, opiszemy użyte metody kalibracji i zaprezentujemy jej wyniki wraz z symulacyjnym sposobem wyceny opcji na soybean crush.\\
-Analizy i wyniki zaprezentowane w całym rozdziale dokonane zostały z użyciem języka programowania Python i jego typowych pakietów do obróbki i wizualizacji danych. Do bardziej specjalistycznych zastosowań użyliśmy funkcji i obiektów zaimplementowanych w bibliotekach: \href{https://www.statsmodels.org/stable/index.html}{\emph{statsmodels}} i \href{https://docs.scipy.org/doc/scipy/}{\emph{scipy}} (testy statystyczne), \href{https://arch.readthedocs.io/en/latest/univariate/introduction.html}{\emph{arch}} (ARIMA-GARCH), oraz \href{https://vinecopulib.github.io/pyvinecopulib/}{\emph{pyvinecopulib}} (kopuły i Vine Copula). Wszystkie testy statystyczne w tym przeprowadzane były na poziomie istotności $\alpha = 0.05$.
+W tym rozdziale zajmiemy się analizą soybean crush spreadu przy pomocy modelu wyrażonego równaniami \ref{eq:model_armagarch}. W kolejnych sekcjach opiszemy dostępne rynkowe dane, użyte metody kalibracji i zaprezentujemy jej wyniki wraz z symulacyjnym sposobem wyceny opcji na soybean crush.\\
+Analizy i wyniki zaprezentowane w całym rozdziale dokonane zostały z użyciem języka programowania Python i jego typowych pakietów do obróbki i wizualizacji danych. Do bardziej specjalistycznych zastosowań użyliśmy funkcji i obiektów zaimplementowanych w bibliotekach: \href{https://www.statsmodels.org/stable/index.html}{\emph{statsmodels}} i \href{https://docs.scipy.org/doc/scipy/}{\emph{scipy}} (testy statystyczne), \href{https://arch.readthedocs.io/en/latest/univariate/introduction.html}{\emph{arch}} (ARIMA-GARCH), oraz \href{https://vinecopulib.github.io/pyvinecopulib/}{\emph{pyvinecopulib}} (kopuły i Vine Copula). Wszystkie testy statystyczne w tym rozdziale przeprowadzane były na poziomie istotności $\alpha = 0.05$.
