--- a/002_LaTeX/wstep.tex
+++ b/002_LaTeX/wstep.tex
@@ -5,8 +5,8 @@
 	
 	Drugi rozdział stanowi opis dwuwymiarowych modeli kopułowych i ich rozszerzenia do \emph{Vine Copulas}. Definiujemy w nim dwuwymiarowe kopuły, podajemy przykłady i pokazujemy że są rozszerzeniem rozkładów wielowymiarowych z rozdziału pierwszego. Redefiniujemy przy tym również miary współzależności z rodziału pierwszego, tym razem w języku kopuł.\\
 	
-	W rozdziale trzecim skupiamy się na pojęciu spreadu aktywów, podajemy ich przykłady obecne na rynkach finansowych i wymieniamy podejścia do ich modelowania. Skupiamy się na podejściu kopułowym, łączącym modelowanie szeregów czasowych z dwuwymiarowymi kopułami. Ideę tę w naturalny sposób rozszerzamy do modelowania spreadów na więcej niż jedno aktywo z wykorzystaniem \emph{Vine Copulas}.\\
+	W rozdziale trzecim skupiamy się na pojęciu spreadu aktywów, podajemy ich przykłady obecne na rynkach finansowych i wymieniamy podejścia do ich modelowania. Skupiamy się na podejściu kopułowym, łączącym modelowanie szeregów czasowych z wielowymiarowymi kopułami - w szczególności ze strukturami \emph{Vine Copulas}.\\
 	
-	Ostatni rozdział prezentuje wynik kalibracji modelu do rzeczywistych danych, tj. cen \emph{soybean crush spread}, czyli różnicy między ceną surowca (ziaren soi), a powstających z niej produktów: mączki sojowej i olejku sojowego. Pokazujemy jak w numeryczny sposób można wycenić w tym modelu opcje europejskie, oraz omawiamy jego wady ujawnione w analizie symulacji.
+	Ostatni rozdział prezentuje wynik kalibracji modelu do rzeczywistych danych, tj. cen \emph{soybean crush spread}, czyli różnicy między ceną surowca (ziaren soi), a powstających z niej produktów: mączki sojowej i olejku sojowego. Pokazujemy jak w numeryczny sposób można wycenić w tym modelu opcje europejskie, oraz porównujemy wyniki symulacji modelu używającego \emph{Vine Copula}, a najprostszego modelu wielowymiarowej kopuły gaussowskiej.
 	
 \end{wstep}
