--- a/002_LaTeX/wycena_opcji.tex
+++ b/002_LaTeX/wycena_opcji.tex
@@ -35,12 +35,11 @@ Możemy użyć metody Monte Carlo w celu otrzymania nie pojedynczej trajektorii,
 	\item Money-market rate: $r = 5\%$
 \end{itemize}
 
-Podobnie jak w \cite{Bernard_Pricing_Multivariate_Options_with_copulae}, czy  \cite{Herath_Copula_Crack_Spread} przeprowadziliśmy $n = 1000$ powtórzeń Monte Carlo, w trakcie których dla każdej ścieżki obliczona została wypłata opcji kupna i sprzedaży, a następnie wyniki zostały uśrednione i zdyskontowane. W ten sposób otrzymujemy finalną cenę opcji w mierze rzeczywistej.
- 
-Rysunek \ref{fig:simulation_monte_carlo} prezentuje wynik symulacji trajektorii spreadu w postaci rozkładu wysymulowanych wartości dla każdego punktu czasowego (każdego tygodnia).
+Podobnie jak w \cite{Bernard_Pricing_Multivariate_Options_with_copulae}, czy  \cite{Herath_Copula_Crack_Spread} przeprowadziliśmy powtórzenia Monte Carlo, w trakcie których dla każdej ścieżki obliczona została wypłata opcji kupna i sprzedaży, a następnie wyniki zostały uśrednione i zdyskontowane. W ten sposób otrzymujemy finalną cenę opcji w mierze rzeczywistej. 
+Rysunek \ref{fig:simulation_monte_carlo} prezentuje wynik symulacji trajektorii spreadu w postaci rozkładu wysymulowanych wartości dla każdego punktu czasowego (każdego tygodnia), natomiast rysunek \ref{fig:payoffs_distribution} pokazuje rozkład spreadu w momencie wygaśnięcia opcji, wraz z rozkładem wypłat opcji call i put. Średnia wypłata, zdyskontowana do chwili $T=0$ daje cenę opcji - co prezentujemy dla różnych cen wykonania w tabeli \ref{tab:option_prices}.\\
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.8\linewidth]{04_CrushSpread_pred}
+	\includegraphics[width=0.9\linewidth]{04_CrushSpread_pred}
 	\caption{\textbf{Symulacja trajektorii (2/2).} Rozkład symulacji Monte Carlo $6$-miesięcznych trajektorii crush spreadu. \label{fig:simulation_monte_carlo}}
 \end{figure}
 
@@ -48,7 +47,7 @@ Rysunek \ref{fig:simulation_monte_carlo} prezentuje wynik symulacji trajektorii 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\linewidth]{04_PayoffsDistribution}
-	\caption{\textbf{Data wykonania opcji.} Histogram wysymulowanych spreadów (lewy panel), oraz histogramy wypłat z opcji: call (środkowy panel) i put (prawy panel), przy cenie wykonania $K=2.0$. \label{fig:payoffs_distribution}}
+	\caption{\textbf{Moment wykonania opcji.} Histogram wysymulowanych spreadów (lewy panel), oraz histogramy wypłat z opcji: call (środkowy panel) i put (prawy panel), przy cenie wykonania $K=2.0$. \label{fig:payoffs_distribution}}
 \end{figure}
 
 
@@ -63,5 +62,24 @@ Rysunek \ref{fig:simulation_monte_carlo} prezentuje wynik symulacji trajektorii 
 		Tables/OptionPrices.csv
 	}{}{\csvlinetotablerow}
 	
-	\caption{\textbf{Ceny europejskich opcji.} Ceny opcji europejskich kupna i sprzedaży w modelu symulacyjnym ARIMA-GARCH-VineCopula, razem z ich błędami standardowymi. \label{tab:option_prices}}
+	\caption{\textbf{Ceny europejskich opcji.} Ceny opcji europejskich kupna i sprzedaży w modelu symulacyjnym ARIMA-GARCH-VineCopula, razem z ich błędami standardowymi. Wyniki otrzymane metodą Monte Carlo dla $1000$ powtórzeń. \label{tab:option_prices}}
 \end{table}
+
+\FloatBarrier
+Na koniec, w celu zilustrowania istotnego wpływu zastosowania Vine Copula, rozważyliśmy sytuację w której model zostałby uproszczony i zamiast struktury Vine do modelowania zależności użytoby najprostszego modelu GMV (gaussian multivariate copula). Rysunek \ref{fig:model_comparison} prezentuje porównanie rozkładu trajektorii spreadu między tymi dwoma modelami. Zaobserwować można, że użycie wielowymiarowej kopuły gaussowskiej skutkuje uchwyceniem ciężkoogonowego charakteru spreadu, oraz że kwantyle dla większości rzędów przebiegają blisko kwantyli powstałych z modelu Vine Copula. Jednak istnieje istotna różnica, widoczna w kwantylach ekstremalnych rzędów, jak $0.01$ czy $0.99$ które udowadniają, że model Vine Copula uchwyca jeszcze cięższe ogony logzwrotów spreadu w stosunku do modelu GMV.
+	
+\begin{figure}[h]
+	\centering
+	\begin{minipage}{\linewidth}
+	\centering
+	\includegraphics[width=0.8\linewidth]{04_MVG_Vine_quantile_comparison}
+	\end{minipage}
+
+	\begin{minipage}{\linewidth}
+	\centering
+	\includegraphics[width=0.5\linewidth]{04_TailComparison}
+	\end{minipage}
+
+	\caption{\textbf{Porównanie modeli.} Kwantyle trajektorii wysymulowanych spreadów przy pomocy wielowymiarowej kopuły normalnej (GMV), oraz Vine Copula (górny panel). Porównanie ciężkości ogonów logzwrotów spreadu (dolny panel).\label{fig:model_comparison}}
+
+\end{figure}
