Add: First batch of review comments

--- a/002_LaTeX/bibliography.bib
+++ b/002_LaTeX/bibliography.bib
@@ -1,28 +1,18 @@
-%% Theory
-
-% Elements of probability
-@book{Rachunek_prob,
-author = {Kordecki, Wojciech},
-publisher={Wydawnictwo GIS},
-year = {2010},
-month = {},
-pages = {},
-title = {Rachunek prawdopodobieństwa i statystyka matematyczna. Definicje, twierdzenia, wzory},
-isbn = {978-83-89020-86-4},
-doi = {}
+@Inbook{Stable_Distributions1,
+	author="Borak, Szymon
+	and H{\"a}rdle, Wolfgang
+	and Weron, Rafa{\l}",
+	title="Stable Distributions",
+	bookTitle="Statistical Tools for Finance and Insurance",
+	year="2005",
+	publisher="Springer Berlin Heidelberg",
+	address="Berlin, Heidelberg",
+	pages="21--44",
+	isbn="978-3-540-27395-0",
+	doi="10.1007/3-540-27395-6_1",
+	url="https://doi.org/10.1007/3-540-27395-6_1"
 }
 
-% Stable distributions
-@article{Stable_Distributions1,
-	author =  {Borak, Szymon and Hardle, K. Wolgang and Weron, Rafał},
-	title = {Stable Distributions},
-	journal = {SFB 649 Discussion Paper},
-	volume = {008},
-	number = {},
-	pages = {},
-	year = {2005},
-	DOI = {https://dx.doi.org/10.2139/ssrn.2894444}
-}
 
 @incollection{Stable_Distributions2,
 title = {13 Financial applications of stable distributions},
@@ -54,16 +44,29 @@ URL = {https://www.pnas.org/doi/abs/10.1073/pnas.1113330108}
 @article{Markovitz_MPT,
 	author = {Markowitz, Harry},
 	title = {Portfolio Selection},
-	journaltitle = {The Journal of Finance},
-	year = {1952},
+	journal = {The Journal of Finance},
+	volume = {7},
+	number = {1},
+	pages = {77-91},
+	doi = {https://doi.org/10.1111/j.1540-6261.1952.tb01525.x},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1540-6261.1952.tb01525.x},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1540-6261.1952.tb01525.x},
+	year = {1952}
 }
 
-
-@article{Aste_Probabilistic_Stress_Testing,
-	author = {Aste, Tomaso},
-	title = {Stress Testing and Systemic Risk Measures Using Elliptical Conditional Multivariate Probabilities},
-	journaltitle = {The Journal of Risk and Financial Management},
-	year = {2021},
+@Article{Aste_Probabilistic_Stress_Testing,
+	author={Tomaso Aste},
+	title={{Stress Testing and Systemic Risk Measures Using Elliptical Conditional Multivariate Probabilities}},
+	journal={JRFM},
+	year=2021,
+	volume={14},
+	number={5},
+	pages={1-17},
+	month={May},
+	keywords={stress testing; systemic risk; elliptical conditional probability},
+	doi={},
+	abstract={Systemic risk, in a complex system with several interrelated variables, such as a financial market, is quantifiable from the multivariate probability distribution describing the reciprocal influence between the system’s variables. The effect of stress on the system is reflected by the change in such a multivariate probability distribution, conditioned to some of the variables being at a given stress’ amplitude. Therefore, the knowledge of the conditional probability distribution function can provide a full quantification of risk and stress propagation in the system. However, multivariate probabilities are hard to estimate from observations. In this paper, I investigate the vast family of multivariate elliptical distributions, discussing their estimation from data and proposing novel measures for stress impact and systemic risk in systems with many interrelated variables. Specific examples are described for the multivariate Student-t and the multivariate normal distributions applied to financial stress testing. An example of the US equity market illustrates the practical potentials of this approach.},
+	url={https://ideas.repec.org/a/gam/jjrfmx/v14y2021i5p213-d551263.html}
 }
 
 
@@ -174,7 +177,7 @@ url="https://doi.org/10.1007/978-1-4757-2763-0_14"
 	year = {2007},
 	month = {01},
 	pages = {},
-	title = {Why We Have Never Used the Black-Scholes-Merton Option Pricing Formula}
+	title = {{Why We Have Never Used the Black-Scholes-Merton Option Pricing Formula}}
 }
 
 @article{CDS_Copula,
@@ -489,12 +492,12 @@ url="https://doi.org/10.1007/978-1-4757-2763-0_14"
 
 @article{KGHM,
 author = {{KGHM Polska Miedź S.A. Group}},
-title = {The management board's report on the activities of KGHM Polska Miedź S.A. and of the KGHM Polska Miedź S.A. Group in 2021},
+title = {{The management board's report on the activities of KGHM Polska Miedź S.A. and of the KGHM Polska Miedź S.A. Group in 2021}},
 year = {2021},
 }
 
 @article{Sukcharoen2017,
-	title = {Hedging downside risk of oil refineries: A vine copula approach},
+	title = {{Hedging downside risk of oil refineries: A vine copula approach}},
 	journal = {Energy Economics},
 	volume = {66},
 	pages = {493-507},
