--- a/002_LaTeX/dwuwymiarowe_kopuly_definicja.tex
+++ b/002_LaTeX/dwuwymiarowe_kopuly_definicja.tex
@@ -1,7 +1,7 @@
 Teorię kopuł zapoczątkował Abe Sklar w \cite{Sklar_Theorem}, podając następujące twierdzenie:
 
 \begin{thm}[Twierdzenie Sklara]
-	Niech $X_1, X_2, \dots, X_d$ będą zmiennymi losowymi ciągłymi, o dystrybuantach $F_1, \dots, F_d$, i rozkładzie łącznym z dystrybuantą $F$. Wtedy istnieje unikalna \emph{kopuła} $C$, taka że dla wszystkich $\mathbf{x} = (x_1, \dots, x_d) \in \mathbb{R}^n$:
+	Niech $X_1, X_2, \dots, X_d$ będą zmiennymi losowymi ciągłymi, o dystrybuantach $F_1, \dots, F_d$, i rozkładzie łącznym z dystrybuantą $F$. Wtedy istnieje unikalna \emph{kopuła} $C$, taka że dla wszystkich $\mathbf{x} = (x_1, \dots, x_d) \in \mathbb{R}^d$:
 	\begin{equation}
 		F(x_1, \dots, x_d) = C(F_1(x_1), \dots, F_d(x_d)).
 		\label{eq:sklar_theorem}
