--- a/002_LaTeX/dwuwymiarowe_kopuly_przyklady.tex
+++ b/002_LaTeX/dwuwymiarowe_kopuly_przyklady.tex
@@ -22,13 +22,13 @@ Widzimy, że równanie \ref{eq:copula_density} jest jedynie przeniesieniem termi
 	\label{thm:sklar_theorem_density}
 \end{thm}
 
-Resztę rozdziału stanowić będzie omówienie różnych rodzin kopuł o istotnych zastosowaniach w praktyce. Będziemy prezentować ich gęstości, ponieważ w intuicyjny sposób przedstawiają one mapę osłabień i nasileń współzależności dla konkretnych kopuł. Informatywne w tym względzie są ich wykresy konturowe, przedstawiające izohipsy powierzchni gęstości. Standardowo przedstawia się je w naturalnej \emph{skali kopuły}, tzn. na kwadracie jednostkowym wizualizuje się bezpośrednio gęstość kopuły:
+Resztę rozdziału stanowić będzie omówienie różnych rodzin kopuł o istotnych zastosowaniach w praktyce. Będziemy prezentować ich gęstości, ponieważ w intuicyjny sposób przedstawiają one mapę osłabień i nasileń współzależności dla konkretnych kopuł. Informatywne w tym względzie są ich wykresy konturowe, przedstawiające poziomice (izohipsy) powierzchni gęstości. Standardowo przedstawia się je w naturalnej \emph{skali kopuły}, tzn. na kwadracie jednostkowym wizualizuje się bezpośrednio gęstość kopuły:
 $$ c(u, v)\text{, dla } (u, v) \in [0, 1]^2.$$
 Pomocna jest jednak również wizualizacja w \emph{skali brzegowo-znormalizowanej}, czyli po dokonaniu transformacji przez dystrybuantę $\Phi$ i gęstość $\phi$ standardowego rozkładu normalnego:
  $$ g(x, y) = c(\Phi(x), \Phi(y))\phi(x)\phi(y)\textit{, dla }(x,y)\in\R^2.$$
-Powyższa transformacja nie wizualizuje już gęstości kopuły $c$, ale raczej gęstość rozkładu wielowymiarowego $g$, który powstałby gdybyśmy kopułą $c$ połączyli zmienne ze standardowego rozkładu normalnego, zgodnie z twierdzeniem \ref{thm:sklar_theorem}. Ta reprezentacja jest bardzo intuicyjna, ponieważ podstawowe kursy statystyki przyzwyczajają ludzkie oko do utożsamiania silnej/słabej korelacji z wydłużonymi/okrągłymi elipsami tworzonymi przez gęstość wielowymiarowego rozkładu normalnego. Reprezentacja w skali brzegowo-znormalizowanej jest intuicyjna, ponieważ dla kopuły gaussowskiej pokazuje dokładnie te same, znane elipsy. Natomiast w przypadku innych kopuł, obserwujemy rozbieżność izohips od eliptycznego kształtu co daje się łatwo zinterpretować. 
+Powyższa transformacja nie wizualizuje już gęstości kopuły $c$, ale raczej gęstość rozkładu wielowymiarowego $g$, który powstałby gdybyśmy kopułą $C$ połączyli zmienne ze standardowego rozkładu normalnego, zgodnie z twierdzeniem \ref{thm:sklar_theorem}. Ta reprezentacja jest bardzo intuicyjna, ponieważ podstawowe kursy statystyki przyzwyczajają ludzkie oko do utożsamiania silnej/słabej korelacji z wydłużonymi/okrągłymi elipsami tworzonymi przez gęstość wielowymiarowego rozkładu normalnego. Reprezentacja w skali brzegowo-znormalizowanej jest intuicyjna, ponieważ dla kopuły gaussowskiej pokazuje dokładnie te same, znane elipsy. Natomiast w przypadku kopuł innych niż gaussowska, obserwujemy oddalanie się izohips od eliptycznych kształtów, co daje się łatwo zinterpretować w języku odchyleń od struktury zależności wielowymiarowego rozkładu normalnego.
 
-W praktyce istnieją trzy główne nurty tworzenia kopuł. Można wykorzystać do tego twierdzenie Sklara \ref{thm:sklar_theorem} jako twierdzenie konstrukcyjne, tj. wziąć pewien istniejący, znany rozkład wielowymiarowy, zaaplikować \emph{PIT} (\ref{def:PIT}) do jego rozkładów brzegowych i odzyskać w ten sposób $C$ z twierdzenia Sklara. Drugą metodą konstrukcji kopuł jest zdefiniowanie ich przez tzw. \emph{generator} - powstają w ten sposób kopuły archimedejskie. Trzeci sposób natomiast to rozszerzenie \emph{extreme-value theory} z jedego do wielu wymiarów, co skutkuje powstaniem kopuł typu \emph{extreme-value}.\\
+W praktyce istnieją trzy główne nurty tworzenia kopuł. Można wykorzystać do tego twierdzenie Sklara \ref{thm:sklar_theorem} jako twierdzenie konstrukcyjne, tj. wziąć pewien istniejący, znany rozkład wielowymiarowy, zaaplikować \emph{PIT} (\ref{def:PIT}) do jego rozkładów brzegowych i odzyskać w ten sposób $C$ z twierdzenia Sklara. Drugą metodą konstrukcji kopuł jest zdefiniowanie ich przez tzw. \emph{generator} - powstają w ten sposób kopuły archimedesowe. Trzeci sposób natomiast to rozszerzenie \emph{extreme-value theory} z jedego do wielu wymiarów, co skutkuje powstaniem kopuł typu \emph{extreme-value}.\\
 
 \subsubsection{Rodzina kopuł eliptycznych}
 
@@ -75,10 +75,10 @@ Dystrybuantę tej kopuły przedstawiliśmy wcześniej na rysunku \ref{fig:prod_c
 	\caption{\textbf{Kopuła gaussowska}, $\rho=0.6$, Powierzchnia gęstości (lewy panel), jej kontur w skali kopuły (prawy górny panel) i kontur w skali brzegowo-znormalizowanej (prawy dolny panel). \label{fig:gaussian_copula_density}}
 \end{figure}
 
-Kopuła gaussowska modeluje strukturę zależności implikowaną przez wielowymiarowy rozkład normalny, tj. wielowymiarowy rozkład normalny jest równoważny modelowi o normalnych rozkładach brzegowych, połączonych kopułą gaussowską. Rodzina kopuł gaussowskich jest wyczerpująca. Przykładowa powierzchnia gęstości oraz kontury kopuły gaussowskiej przedstawione są na rysunku \ref{fig:gaussian_copula_density}.
+Kopuła gaussowska modeluje strukturę zależności implikowaną przez wielowymiarowy rozkład normalny, tj. wielowymiarowy rozkład normalny jest równoważny modelowi o normalnych rozkładach brzegowych, połączonych kopułą gaussowską. Rodzina kopuł gaussowskich jest rodziną kompletną. Przykładowa powierzchnia gęstości oraz kontury kopuły gaussowskiej przedstawione są na rysunku \ref{fig:gaussian_copula_density}.
 
 \begin{df}[Kopuła studenta]
-	Kopuła studenta to jednoparametryczna kopuła o $\nu$ stopniach swobody i korelacji $\rho$ zadana jest gęstością:
+	Kopuła studenta to jednoparametryczna kopuła o $\nu$ stopniach swobody i współczynniku korelacji $\rho$ zadana jest gęstością:
 	
 	$$ C(u_1, u_2;\nu,\rho) = \frac{t(T_{\nu}^{-1}(v_1), T_{\nu}^{-1}(v_2);\nu,\rho)}{t_{\nu}(T_{\nu}^{-1}(v_1))t_{\nu}(T_{\nu}^{-1}(v_2))}.$$
 \end{df}
@@ -93,26 +93,26 @@ Kopuła gaussowska modeluje strukturę zależności implikowaną przez wielowymi
 	\end{minipage}
 	\caption{\textbf{Kopuła studenta}, $\nu=3, \rho=0.5$: powierzchnia gęstości (lewy panel), jej kontur w skali kopuły (prawy górny panel) i kontur w skali brzegowo-znormalizowanej (prawy dolny panel). \label{fig:student_copula_density}}
 \end{figure}
-Kopuła studenta, podobnie do gaussowskiej, jest implikowana z rozkładu eliptycznego studenta. Oznacza to, że wielowymiarowy rozkład studenta jest równoważny modelowi o rozkładach brzegowych $t$ połączonych kopułą studenta. Wraz z rosnącą ilością stopni swobody kopuła studenta zbiega do gaussowskiej. Ta rodzina nie jest jednak wyczerpująca, ponieważ nawet przy $\rho=0$, dla żadnej skończonej liczby stopni swobody nie zawiera w sobie $C^{\perp}$.\\
+Kopuła studenta, podobnie do gaussowskiej, jest implikowana z rozkładu eliptycznego t-Studenta. Oznacza to, że wielowymiarowy rozkład t-Studenta jest równoważny modelowi o rozkładach brzegowych t-Studenta połączonych kopułą studenta. Wraz z rosnącą liczbą stopni swobody kopuła studenta zbiega do gaussowskiej. Ta rodzina nie jest jednak kompletna, ponieważ nawet przy $\rho=0$, dla żadnej skończonej liczby stopni swobody nie zawiera w sobie $C^{\perp}$.\\
 
-Kopuły eliptyczne cieszą się dużą popularnością w instytucjach finansowych, ponieważ mają swoje naturalne $d$-wymiarowe rozszerzenia. Kopuły uważane są mimo wszystko za skomplikowane modele, i w obliczu szczegółowych regulacji nakładanych na wewnętrzne modele (np. w podejściu AMA do modelowania ryzyka operacyjnego \cite{BaselII}) dużo łatwiej jest uzasadnić i utrzymać w produkcji model bazujący na kilku intuicyjnych parametrach. Z tego powodu, kopuła $t$ studenta jest najczęściej wybieraną w praktyce - pozwala bowiem na modelowanie ciężkich ogonów i korelacji, a jednocześnie jest zaledwie dwuparametryczna (\cite{OpRisk}).\\
+Kopuły eliptyczne cieszą się dużą popularnością w instytucjach finansowych, ponieważ mają swoje naturalne $d$-wymiarowe rozszerzenia. Kopuły uważane są mimo wszystko za skomplikowane modele, i w obliczu szczegółowych regulacji nakładanych na wewnętrzne modele (np. w podejściu AMA do modelowania ryzyka operacyjnego \cite{BaselII}) dużo łatwiej jest uzasadnić i utrzymać w produkcji model bazujący na kilku intuicyjnych parametrach. Z tego powodu, kopuła studenta jest najczęściej wybieraną w praktyce - pozwala bowiem na modelowanie ciężkich ogonów i korelacji, a jednocześnie jest zaledwie dwuparametryczna (\cite{OpRisk}).\\
 
-\subsubsection{Rodzina kopuł archimedejskich}
+\subsubsection{Rodzina kopuł archimedesowych}
 
-\begin{df}[Kopuły archimedejskie]
+\begin{df}[Kopuły archimedesowe]
 		Niech $\mathcal{F}$ będzie zbiorem ciągłych, jednostajnie malejących i wypukłych funkcji $\phi \colon [0,1] \mapsto [0, \infty]$, takich, że $\phi(1) = 0$. Wtedy
 		
 		$$ C(u_1, u_2) = \phi^{[-1]}(\phi(u_1)+\phi(u_2))$$
-		jest kopułą. Uściślając, nazwiemy ją kopułą archimedejską o generatorze $\phi$. W powyższej definicji, przez $\phi^{[-1]}$ rozumiemy pseudoodwrotność $\phi$, czyli funkcję $\phi^{[-1]}\colon [0, \infty] \mapsto [0, 1]$ zadaną przez:
+		jest kopułą. Uściślając, nazwiemy ją kopułą archimedesową o generatorze $\phi$. W powyższej definicji, przez $\phi^{[-1]}$ rozumiemy pseudoodwrotność $\phi$, czyli funkcję $\phi^{[-1]}\colon [0, \infty] \mapsto [0, 1]$ zadaną przez:
 		
 		$$ \phi^{[-1]}(t) \coloneqq \phi^{-1}(t) \1_{\{0\leqslant t \leqslant \phi(0)\}}. $$
 \end{df}
 
-Ta rodzina została wprowadzona została przez Claytona w \cite{Clayton1972} w kontekście modelowania zapadalności na choroby przewlekłe, gdzie posłużyła do opisania zależności w aktuarialnych tabelach średniego dalszego trwania życia. Dziś kopuły archimedejskie wymieniane są pośród najczęściej wykorzystywanych do analizy zależności dwuwymiarowych. W przeciwieńswie do rodziny eliptycznej, kopuły z rodziny archimedejskiej potrafią modelować asymetryczne zależności. Oznacza to, że osiągalne są w nich struktury, w których dolne ogony zmiennych losowych są bardziej od siebie zależne niż ogony prawe i \emph{vice versa}. Najprostsze tego zastosowanie to model zwrotów na rynku akcji, które przejawiają silniejszą korelację w lewym ogonie niż w prawym (\cite{AssymetricEquityDependency}). \\
-Ponadto, kopuły archimedejskie pozwalają wyrazić $\tau$ Kendalla, czy współczynnik zależności ogonów w języku generatora, co powoduje, że są łatwe w estymacji.
+Ta rodzina została wprowadzona została przez Claytona w \cite{Clayton1972} w kontekście modelowania zapadalności na choroby przewlekłe, gdzie posłużyła do opisania zależności w aktuarialnych tabelach średniego dalszego trwania życia. Dziś kopuły archimedesowe wymieniane są pośród najczęściej wykorzystywanych do analizy zależności dwuwymiarowych. W przeciwieńswie do rodziny eliptycznej, kopuły z rodziny archimedesowej potrafią modelować asymetryczne zależności. Oznacza to, że osiągalne są w nich struktury, w których dolne ogony zmiennych losowych są bardziej od siebie zależne niż ogony prawe i \emph{vice versa}. Najprostsze tego zastosowanie to model zwrotów na rynku akcji, które przejawiają silniejszą korelację w lewym ogonie niż w prawym (\cite{AssymetricEquityDependency}). \\
+Ponadto, kopuły archimedesowe pozwalają wyrazić $\tau$ Kendalla, czy współczynnik zależności ogonów w języku generatora, co powoduje, że są łatwe w estymacji.
 
 \begin{prop}
-	Dla dwóch zmiennych losowych połączonych kopułą archimedejską o generatorze $\phi$, współczynnik $\tau$ Kendalla ma reprezentację:
+	Dla dwóch zmiennych losowych połączonych kopułą archimedesową o generatorze $\phi$, współczynnik $\tau$ Kendalla ma reprezentację:
 	
 	$$ \tau = 4\int_{[0, 1]}\frac{\phi(v)}{\phi'(v)}dv + 1.$$
 	
@@ -125,10 +125,10 @@ Ponadto, kopuły archimedejskie pozwalają wyrazić $\tau$ Kendalla, czy współ
 		\end{split}
 	\end{equation}
 \end{prop}
-Powyższe uwagi powoduja, że rodzina kopuł archimedejskich jest zazwyczaj wystarczająco dobra dla większości praktycznych zastosowań. Do tej klasy należą m.in kopuły Claytona, Gumbela czy Franka.
+Powyższe uwagi powoduja, że rodzina kopuł archimedesowych jest zazwyczaj wystarczająco dobra dla większości praktycznych zastosowań. Do tej klasy należą m.in kopuły Claytona, Gumbela czy Franka.
 
 \begin{df}[Kopuła Claytona]
-	Kopuła Claytona to kopuła archimedejska o generatorze $\phi(t;\delta) = \frac{1}{\delta}(t^{-\delta}-1)$. Jest ona jednoparametryczną kopułą, wyrażoną poprzez dystrybuantę zadaną wzorem:
+	Kopuła Claytona to kopuła archimedesowa o generatorze $\phi(t;\delta) = \frac{1}{\delta}(t^{-\delta}-1)$. Jest ona jednoparametryczną kopułą, wyrażoną poprzez dystrybuantę zadaną wzorem:
 	
 	$$ C(u_1, u_2; \delta) = (u_1 ^{-\delta} + u_2^{-\delta} - 1)^{-\frac{1}{\delta}},$$
 	dla $\delta \in [-1, 0) \cup (0, \infty).$
@@ -145,7 +145,7 @@ Powyższe uwagi powoduja, że rodzina kopuł archimedejskich jest zazwyczaj wyst
 		\end{split}
 	\end{equation}
 \end{prop}
-Kopuła Claytona pozwala modelować niesymetryczne zależności zmiennych losowych. Jest rodziną wyczerpującą, mamy bowiem: $C(u,v;\delta = 1) = C^{\perp}$, $C(u,v;\delta = -1) = C^{-}$, oraz $C(u,v;\delta \to \infty) \to C^{+}$. Rysunek \ref{fig:clayton_copula_density} przedstawia powierzchnię gęstości i kontury w przypadku $\delta = 1.2$. Na rysunku widoczny jest dobrze wpływ istnienia dolnego współczynnika zależności ogonów na kształt konturów i gęstości.
+Kopuła Claytona pozwala modelować niesymetryczne zależności zmiennych losowych. Jest rodziną kompletną, mamy bowiem: $C(u,v;\delta = 1) = C^{\perp}$, $C(u,v;\delta = -1) = C^{-}$, oraz $C(u,v;\delta \to \infty) \to C^{+}$. Rysunek \ref{fig:clayton_copula_density} przedstawia powierzchnię gęstości i kontury w przypadku $\delta = 1.2$. Na rysunku widoczny jest dobrze wpływ istnienia dolnego współczynnika zależności ogonów na kształt konturów i gęstości.
 
 \begin{figure}[h]
 	\centering
@@ -160,7 +160,7 @@ Kopuła Claytona pozwala modelować niesymetryczne zależności zmiennych losowy
 \end{figure}
 
 \begin{df}[Kopuła Gumbela]
-	Kopuła Gumbela to kopuła archimedejska o generatorze $\phi(t;\delta) = (-\ln t)^{\delta}$. Jest ona jednoparametryczną kopuła, wyrażoną poprzez dystrybuantę zadaną wzorem:
+	Kopuła Gumbela to kopuła archimedesowa o generatorze $\phi(t;\delta) = (-\ln t)^{\delta}$. Jest ona jednoparametryczną kopuła, wyrażoną poprzez dystrybuantę zadaną wzorem:
 	
 	$$ C(u_1, u_2; \delta) = \exp\big[-[(-\ln u_1)^\delta+(-\ln u_2)^\delta]^{\frac{1}{\delta}}\big],$$
 	dla $\delta \geqslant 1.$
@@ -177,7 +177,7 @@ Kopuła Claytona pozwala modelować niesymetryczne zależności zmiennych losowy
 		\end{split}
 	\end{equation}
 \end{prop}
-Kopuła Gumbela również pozwala modelować niesymetryczne zależności zmiennych losowych.  Rysunek \ref{fig:gumbel_copula_density} przedstawia powierzchnię gęstości i kontury w przypadku $\delta = 1.8$, gdzie widzimy powyższą niesymetryczność. Ta rodzina nie jest jednak wyczerpującą, ponieważ mamy jedynie $C(u,v;\delta = 1) = C^{\perp}$, oraz $C(u,v;\delta \to \infty) \to C^{+}$, natomiast kopuła $C^{-}$ nie jest częścią tej rodziny. \\
+Kopuła Gumbela również pozwala modelować niesymetryczne zależności zmiennych losowych.  Rysunek \ref{fig:gumbel_copula_density} przedstawia powierzchnię gęstości i kontury w przypadku $\delta = 1.8$, gdzie widzimy powyższą niesymetryczność. Ta rodzina nie jest jednak kompletną, ponieważ mamy jedynie $C(u,v;\delta = 1) = C^{\perp}$, oraz $C(u,v;\delta \to \infty) \to C^{+}$, natomiast kopuła $C^{-}$ nie jest częścią tej rodziny. \\
 Kopuły Gumbela mogą więc posługiwać do modelowania jedynie dodatnich zależności, lub w granicznym przypadku niezależności. Nie przeszkodziło to jednak w skutecznej aplikacji tych kopuł do badań klinicznych, gdzie spopularyzował je Hougaard, w \cite{Hougaard1986} wykorzystując do testowania hipotez o pozytywnym wpływie leku przeciw guzom na długość życia szczurów w grupie leczenia.
 
 \begin{figure}[h]
@@ -193,7 +193,7 @@ Kopuły Gumbela mogą więc posługiwać do modelowania jedynie dodatnich zależ
 \end{figure}
 
 \begin{df}[Kopuła Franka]
-	Kopuła Franka to kopuła archimedejska o generatorze $\phi(t;\delta) = -\ln\frac{\exp(-\alpha t) - 1}{\exp(-\alpha)-1}$. Jest ona jednoparametryczną kopuła, wyrażoną poprzez dystrybuantę zadaną wzorem:
+	Kopuła Franka to kopuła archimedesowa o generatorze $\phi(t;\delta) = -\ln\frac{\exp(-\alpha t) - 1}{\exp(-\alpha)-1}$. Jest ona jednoparametryczną kopuła, wyrażoną poprzez dystrybuantę zadaną wzorem:
 	
 	$$ C(u_1, u_2; \delta) = -\frac{1}{\delta}\ln\bigg[ \frac{1}{1-e^{-\delta}}\big[(1-e^{-\delta}) - (1-e^{-\delta u_1})(1-e^{-\delta u_2})\big] \bigg],$$
 	dla $\delta \in (-\infty; 0) \cup (0; \infty).$
@@ -225,7 +225,7 @@ Kopuły Gumbela mogą więc posługiwać do modelowania jedynie dodatnich zależ
 	\caption{\textbf{Kopuła Franka}, $\delta = 5$: powierzchnia gęstości (lewy panel), jej kontur w skali kopuły (prawy górny panel) i kontur w skali brzegowo-znormalizowanej (prawy dolny panel). \label{fig:frank_copula_density}}
 \end{figure}
 
-Rodzina kopuł Franka jest rodziną wyczerpującą, bowiem $C(u,v;\delta = 0) = C^{\perp}$, $C(u,v;\delta \to \infty) \to C^{+}$, oraz $C(u,v;\delta \to -\infty) \to C^{-}$ . Kopuła Franka jako jedyna z wymienionych kopuł archimedejskich jest symetryczna. Rysunek \ref{fig:frank_copula_density} przedstawia powierzchnię gęstości i kontury w przypadku $\delta = 5$. \\
+Rodzina kopuł Franka jest rodziną kompletną, bowiem $C(u,v;\delta = 0) = C^{\perp}$, $C(u,v;\delta \to \infty) \to C^{+}$, oraz $C(u,v;\delta \to -\infty) \to C^{-}$ . Kopuła Franka jako jedyna z wymienionych kopuł archimedesowych jest symetryczna. Rysunek \ref{fig:frank_copula_density} przedstawia powierzchnię gęstości i kontury w przypadku $\delta = 5$. \\
 Jedno z ciekawych jej zastosowań, przedstawia \cite{Jianwei2021}. W swojej pracy Jianwei rozważa problem optymalizacji częstości ładowania pojazdów elektrycznych. Kopuła Franka jest przez niego używana do modelowania zależności między siłą wiatru, a ilością energii z ogniw fotowoltaicznych, co wykorzystuje do wyznaczenia optymalnej strategii ładowania pojazdu, która stabilizuje popyt/podaż na energię w sieci energetycznej, skutkując niższymi kosztami utrzymania pojazdu. 
 
 \subsubsection{Rodzina kopuł \emph{extreme-value}}
@@ -281,7 +281,7 @@ Przykładem kopuły \emph{extreme-value} z podanych już wcześniej jest kopuła
 		\end{split}
 	\end{equation}
 \end{prop}
-Kopuła Marshalla-Olkina jest nietypowa, bo posiada część ciągłą, o powyższej gęstości, jak i część singularną wzdłuz krzywej $u_1^m=u_2^n$. Ta rodzina nie jest wyczerpująca, ponieważ nie zawiera $C^{-}$. Natomiast dla $m=0 \vee n=0$ mamy $C^{\perp}$, a przy $m=1=n$ dostajemy $C^{+}$. Wizualizację kopuli Marshalla-Olkina można zobaczyć na rysunku \ref{fig:marshall_olkin_copula_density}.\\
+Kopuła Marshalla-Olkina jest nietypowa, bo posiada część ciągłą, o powyższej gęstości, jak i część singularną wzdłuz krzywej $u_1^m=u_2^n$. Ta rodzina nie jest kompletna, ponieważ nie zawiera $C^{-}$. Natomiast dla $m=0 \vee n=0$ mamy $C^{\perp}$, a przy $m=1=n$ dostajemy $C^{+}$. Wizualizację kopuli Marshalla-Olkina można zobaczyć na rysunku \ref{fig:marshall_olkin_copula_density}.\\
 Kopuły Marshalla-Olkina powstają naturalnie w teorii niezawodności systemów. Rozważając system o wielu komponentach, gdzie awaria dowolnego komponentu powoduje awarię całego systemu, w klasycznym podejściu zakłada się rozkład wykładniczy dla czasu życia każdego z komponentów (z powodu braku pamięci), oraz niezależność między komponentami. W praktyce jednak, czasy do awarii poszczególnych komponentów nie są niezależne. Rozważenie momentu awarii systemu jako moment pierwszej awarii któregoś z jego komponentów prowadzi właśnie do kopuły Marshalla-Olkina \cite{Matus2019}.\\
 
 \begin{figure}[h]
