--- a/002_LaTeX/kopuly_intro.tex
+++ b/002_LaTeX/kopuly_intro.tex
@@ -2,4 +2,4 @@ Zgodnie z drugim filarem Basel II instytucje finansowe zobowiązane są dokonywa
 Podejście to ma istotną wadę: nie jesteśmy w nim w stanie sensownie oszacować prawdopodobieństwa wystąpienia akurat takiej realizacji \emph{shock expansion}, ponieważ wynikiem są jedynie pojedyncze trajektorie. Nowym kierunkiem w procesie shock expansion zaczyna być natomiast tzw. probabilistic stress testing (np. \cite{Aste_Probabilistic_Stress_Testing}). Ideą jest tu zamodelowanie wielowymiarowego systemu zmiennych makroekonomicznych i rynkowych, w sposób pozwalający zaaplikowanie rynkowej narracji regulatora jako zbioru warunkującego ten system. Umożliwia to odzyskanie rozkładów warunkowych dla innych komponentów systemu, w szczególności dla tych które są potrzebne jako wynik \emph{shock expansion}.\\
 \cite{Aste_Probabilistic_Stress_Testing} w swojej pracy bada potencjalne zastosowanie rozkładów eliptycznych, wprowadzonych w rozdziale \ref{sec:rozklady_laczne} jako jednego, wielowymiarowego modelu wyżej opisanego systemu. Wyniki które otrzymuje wskazują, że mimo iż rozkłady eliptyczne dają intuicyjne wyniki co do ogólnego kierunku rozwoju warunkowanych rozkładów, to nie są wystarczająco elastyczne aby poprawnie uchwycić wszystkie cechy systemu. Jako tego powód, Aste wymienia \textit{symetrię} modelu, która przejawia się w konieczności wyboru tych samych rodzin rozkładów brzegowych i jest implikowana użyciem rozkładów eliptycznych.\\
 
-Powyższy przykład to jeden z długiego szeregu który ilustruje, że praktyczne problemy wymagają dowolności w wyborze rozkładów brzegowych (wiele innych interesujących przykładów podają \cite{Cherubini_Copula_Methods_in_Finance}, czy \cite{Cherubini_Dynamic_Copula_Methods_in_Finance}). Dlatego mimo, że istnieje wiele matematycznie poprawnych rozszerzeń zmiennych losowych z $d=1$ do $d>2$ (jak wielowymiarowy rozkład normalny, wielowymiarowy rozkład t, wielowymiarowy rozkład gamma, etc.), to nie cieszą się one dużym zastosowaniem w praktyce. Odpowiedzią na to ograniczenie są kopuły - modele wielowymiarowych zmiennych losowych, pozwalające na oddzielenie wpływu rozkładów brzegowych od wpływu struktury zależności na cały system.\\
+Powyższy przykład to jeden z długiego szeregu który ilustruje, że praktyczne problemy wymagają dowolności w wyborze rozkładów brzegowych (wiele innych interesujących przykładów podają \cite{Cherubini_Copula_Methods_in_Finance}, czy \cite{Cherubini_Dynamic_Copula_Methods_in_Finance}). Dlatego mimo, że istnieje wiele matematycznie poprawnych rozszerzeń zmiennych losowych z $d=1$ do $d>2$ (jak wielowymiarowy rozkład normalny, wielowymiarowy rozkład t-Studenta, wielowymiarowy rozkład gamma, etc.), to nie cieszą się one dużym zastosowaniem w praktyce. Odpowiedzią na to ograniczenie są kopuły - modele wielowymiarowych zmiennych losowych, pozwalające na oddzielenie wpływu rozkładów brzegowych od wpływu struktury zależności na cały system.\\
